[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/PauseButton.gd" type="Script" id=1]
[ext_resource path="res://scenes/Settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sounds/wood-hard-hit.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/borderButtons/pauseButton.png" type="Texture" id=5]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]
mouse_filter = 2

[node name="SoundButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 5.0
margin_right = 45.0
margin_bottom = 46.0
texture_normal = ExtResource( 5 )

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
